--- a/src/app/mainwindow.ui
+++ b/src/app/mainwindow.ui
@@ -37,10 +37,10 @@
    <widget class="QPushButton" name="pauseButton">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>430</y>
-      <width>201</width>
-      <height>121</height>
+      <x>150</x>
+      <y>440</y>
+      <width>151</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="text">
@@ -50,9 +50,9 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>0</x>
       <y>440</y>
-      <width>201</width>
+      <width>141</width>
       <height>101</height>
      </rect>
     </property>
@@ -68,6 +68,19 @@
       <width>511</width>
       <height>401</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="stepButton">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>440</y>
+      <width>151</width>
+      <height>101</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Step</string>
     </property>
    </widget>
   </widget>
