--- a/src/app/mainwindow.ui
+++ b/src/app/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>941</width>
     <height>600</height>
    </rect>
   </property>
@@ -17,8 +17,8 @@
    <widget class="QTableWidget" name="cpuStateTableWidget">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>0</y>
+      <x>670</x>
+      <y>10</y>
       <width>261</width>
       <height>271</height>
      </rect>
@@ -27,7 +27,7 @@
    <widget class="QTableWidget" name="ppuStateTableWidget">
     <property name="geometry">
      <rect>
-      <x>530</x>
+      <x>670</x>
       <y>290</y>
       <width>261</width>
       <height>261</height>
@@ -37,10 +37,10 @@
    <widget class="QPushButton" name="pauseButton">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>440</y>
-      <width>151</width>
-      <height>101</height>
+      <x>390</x>
+      <y>500</y>
+      <width>131</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
@@ -50,10 +50,10 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>440</y>
-      <width>141</width>
-      <height>101</height>
+      <x>250</x>
+      <y>500</y>
+      <width>131</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
@@ -63,24 +63,37 @@
    <widget class="OpenGLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>9</x>
-      <y>19</y>
-      <width>511</width>
-      <height>401</height>
+      <x>80</x>
+      <y>10</y>
+      <width>512</width>
+      <height>480</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="stepButton">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>440</y>
-      <width>151</width>
-      <height>101</height>
+      <x>530</x>
+      <y>500</y>
+      <width>121</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Step</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="memoryDumpButton">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>500</y>
+      <width>101</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View memory</string>
     </property>
    </widget>
   </widget>
@@ -89,7 +102,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>941</width>
      <height>22</height>
     </rect>
    </property>
