--- a/src/app/mainwindow.ui
+++ b/src/app/mainwindow.ui
@@ -6,39 +6,45 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>941</width>
-    <height>600</height>
+    <width>908</width>
+    <height>915</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="cpuStateTableWidget">
+   <widget class="QTableView" name="cpuStateTableView">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>10</y>
-      <width>261</width>
-      <height>271</height>
+      <x>10</x>
+      <y>500</y>
+      <width>621</width>
+      <height>171</height>
      </rect>
     </property>
+    <attribute name="horizontalHeaderStretchLastSection">
+     <bool>false</bool>
+    </attribute>
    </widget>
-   <widget class="QTableWidget" name="ppuStateTableWidget">
+   <widget class="QTableView" name="ppuStateTableView">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>290</y>
-      <width>261</width>
-      <height>261</height>
+      <x>10</x>
+      <y>690</y>
+      <width>871</width>
+      <height>171</height>
      </rect>
     </property>
+    <attribute name="horizontalHeaderStretchLastSection">
+     <bool>false</bool>
+    </attribute>
    </widget>
    <widget class="QPushButton" name="pauseButton">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>500</y>
+      <x>760</x>
+      <y>70</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -50,8 +56,8 @@
    <widget class="QPushButton" name="playButton">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>500</y>
+      <x>610</x>
+      <y>60</y>
       <width>131</width>
       <height>51</height>
      </rect>
@@ -63,8 +69,8 @@
    <widget class="OpenGLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>10</y>
+      <x>70</x>
+      <y>0</y>
       <width>512</width>
       <height>480</height>
      </rect>
@@ -73,8 +79,8 @@
    <widget class="QPushButton" name="stepButton">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>500</y>
+      <x>620</x>
+      <y>140</y>
       <width>121</width>
       <height>51</height>
      </rect>
@@ -86,8 +92,8 @@
    <widget class="QPushButton" name="memoryDumpButton">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>500</y>
+      <x>770</x>
+      <y>150</y>
       <width>101</width>
       <height>51</height>
      </rect>
@@ -96,13 +102,23 @@
      <string>View memory</string>
     </property>
    </widget>
+   <widget class="QTableView" name="memoryTableView">
+    <property name="geometry">
+     <rect>
+      <x>640</x>
+      <y>270</y>
+      <width>241</width>
+      <height>411</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>941</width>
+     <width>908</width>
      <height>22</height>
     </rect>
    </property>
