--- a/src/app/mainwindow.ui
+++ b/src/app/mainwindow.ui
@@ -112,6 +112,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="VRAMDumpButton">
+    <property name="geometry">
+     <rect>
+      <x>770</x>
+      <y>210</y>
+      <width>101</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View VRAM</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
