--- a/src/app/mainwindow.ui
+++ b/src/app/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>908</width>
+    <width>1020</width>
     <height>915</height>
    </rect>
   </property>
@@ -125,13 +125,26 @@
      <string>View VRAM</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="patternTableButton">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>150</y>
+      <width>121</width>
+      <height>111</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>View pattern table</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>908</width>
+     <width>1020</width>
      <height>22</height>
     </rect>
    </property>
